tdf#101894 Copying a single sheet with a chart on it garbles the chart

..on the new sheet

Bug introduced with
    commit 86e9ef21a06a9babefb778dfc3e02118d371d70d
    Author: Noel Grandin <noelgrandin@gmail.com>
    Date:   Tue Mar 8 20:41:21 2016 +0200
    sequence->vector in sc

Change-Id: I7a6539005f42c7a7036c60b12a9ff2f77f71ba6b
Reviewed-on: https://gerrit.libreoffice.org/29169
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Tested-by: Markus Mohrhard <markus.mohrhard@googlemail.com>